--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,8 +6,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="description" content="CAS - Single Sign-On for the Web"/>
-
+    <meta name="description" content="CAS - Enterprise Single Sign-On for the Web"/>
+    <meta name="keywords" content="authentication, login, cas, central authentication service, web, java, protocol, thymeleaf, open source, boot, spring, authorization, google, facebook, twitter, higher-ed, enterprise, access management, single signon, sso, RBAC, ABAC, attributes, SAML, OpenID, openid connect, JWT, ADFS" />
+    <meta name="robots" content="index,follow" />
+     
     {% capture lvl %}{{ page.url | append:'index.html' | split:'/' | size }}{% endcapture %}
     {% capture relative %}{% for i in (3..lvl) %}../{% endfor %}{% endcapture %}
 
