Updated password link

--- a/cas-server-webapp/src/main/resources/templates/fragments/loginform.html
+++ b/cas-server-webapp/src/main/resources/templates/fragments/loginform.html
@@ -57,7 +57,7 @@
                         <span th:utext="#{screen.capslock.on}"/>
                     </p>
                 </span>
-                <a href="https://pwd.example.org" th:text="#{screen.pm.button.forgotpwd}" />
+                <span th:utext="#{screen.pm.button.forgotpwd}" />
             </div>
         </section>
         <section class="row check">
