--- a/cas-management-webapp/src/main/resources/templates/fragments/serviceform/rejectedAttributes.html
+++ b/cas-management-webapp/src/main/resources/templates/fragments/serviceform/rejectedAttributes.html
@@ -66,7 +66,7 @@
             </tr>
             <tr ng-show="row.isAdding">
                 <td><input class="form-control noresize editable-text" placeholder="New property name"
-                              ng-model="row.propValue"></input></td>
+                              ng-model="row.name"></input></td>
                 <td><input class="form-control noresize editable-text" placeholder="New property value"
                               ng-model="row.propValue"></input></td>
                 <td>
