Fixed: Properties: Editing an attr name forces me to use the same value. name has nothing to do with its values

--- a/cas-management-webapp/src/main/resources/templates/fragments/serviceform/propertiesPane.html
+++ b/cas-management-webapp/src/main/resources/templates/fragments/serviceform/propertiesPane.html
@@ -56,7 +56,7 @@ Todo: Wire up the save/edit functionality
                 </tr>
                 <tr ng-show="row.isAdding">
                     <td><input class="form-control noresize editable-text" rows="2" placeholder="New property name"
-                                  ng-model="row.propValue"></input></td>
+                                  ng-model="row.name"></input></td>
                     <td><input class="form-control noresize editable-text" rows="2" placeholder="New property value"
                                   ng-model="row.propValue"></input></td>
                     <td>
