--- a/cas-server-webapp/src/main/resources/templates/casPropagateLogoutView.html
+++ b/cas-server-webapp/src/main/resources/templates/casPropagateLogoutView.html
@@ -9,6 +9,16 @@
         function redirectToApp() {
             window.location = /*[[${logoutRedirectUrl}]]*/ ;
         }
+        
+        function handleCallback(index, status) {
+            if (status == 200) {
+                $("#service" + index).addClass("fa fa-check")
+                $("#service" + index).prop('title', 'Logout request was successfully received.');
+            } else {
+                $("#service" + index).addClass("fa fa-error")
+                $("#service" + index).prop('title', 'Logout notification could not be sent.');
+            }
+        }
         /*]]>*/
     </script>
 </head>
@@ -23,31 +33,20 @@
             <ol start="a">
                 <li th:each="entry,iterStat : ${logoutUrls}">
                     <script type="text/javascript" th:inline="javascript">
-                                                
+                        
                         $.ajax({
                             url:/*[[${entry.key.logoutUrl.toExternalForm()}]]*/,
                             dataType: 'jsonp',
                             async: true,
                             contentType: /*[[${entry.value.contentType}]]*/
                             , data: /*[[${entry.value.message}]]*/
-                            , method: 'post',
-                            success: function (data) {
+                            , success: function (data) {
                                 var index = /*[[${iterStat.index}]]*/;
-                                $("#service" + index).addClass("fa fa-check")
-                                $("#service" + index).prop('alt', 
-                                            'Logout notification was successfully submitted.');
+                                handleCallback(index, 200);
                             },
-                            error: function (err) {
+                            error: function (err, textStatus, errorThrown) {
                                 var index = /*[[${iterStat.index}]]*/;
-                                if (err.status == 200) {
-                                    $("#service" + index).addClass("fa fa-exclamation")
-                                    $("#service" + index).prop('alt',
-                                            'Logout request was rejected.');
-                                } else {
-                                    $("#service" + index).addClass("fa fa-error")
-                                    $("#service" + index).prop('alt',
-                                            'Logout notification could not be sent.');
-                                }
+                                handleCallback(index, err.status);
                             }
                         });
                     </script>
