--- a/cas-server-webapp/src/main/resources/templates/fragments/cas-resources-list.html
+++ b/cas-server-webapp/src/main/resources/templates/fragments/cas-resources-list.html
@@ -3,7 +3,7 @@
     <ul class="list-group">
         <li class="list-group-item">
             <a href="status/dashboard" th:inline="text">
-                <i class="fa fa-file"></i> [[#{cas.login.resources.dashboard}]]
+                <i class="fa fa-cogs"></i> [[#{cas.login.resources.dashboard}]]
             </a>
         </li>
         <li class="list-group-item">
