--- a/_includes/mobilenavbar.html
+++ b/_includes/mobilenavbar.html
@@ -22,7 +22,7 @@
             <li class="nav-item"><a href="{{ relative }}Support.html" class="nav-link">Support</a></li>
             <li class="nav-item"><a href="{{ relative }}Mailing-Lists.html" class="nav-link">Mailing Lists</a></li>
             <li class="nav-item"><a href="{{ relative }}Older-Versions.html" class="nav-link">Versions</a></li>
-            <li class="nav-item"><a href="https://mmoayyed.github.io" target="_blank" class="nav-link">Blog</a></li>
+            <li class="nav-item"><a href="https://apereo.github.io" target="_blank" class="nav-link">Blog</a></li>
         </ul>
     </nav>
     <!-- /top nav -->
