--- a/cas-server-webapp/src/main/resources/templates/casMfaRegisterDeviceView.html
+++ b/cas-server-webapp/src/main/resources/templates/casMfaRegisterDeviceView.html
@@ -8,14 +8,18 @@
 <body id="cas">
 <div layout:fragment="content">
     <div class="box fl-panel" id="login">
-        <h1 th:text="#{cas.mfa.registerdevice.label.intro}" />
+        <h2 th:text="#{cas.mfa.registerdevice.label.title}"/>
+        <div th:text="#{cas.mfa.registerdevice.label.intro}"/>
         <form method="post" id="registerform" class="fm-v clearfix">
             <div class="row fl-controls-left">
                 <label for="deviceName" class="fl-label" th:utext="#{cas.mfa.registerdevice.label.name}"/>
 
-                <input type="text" class="required" id="deviceName" size="25" tabindex="1" autocomplete="off"/>
-                <input class="btn btn-submit" name="_eventId_submit" accesskey="l"
-                       th:value="#{cas.mfa.registerdevice.button.register}" tabindex="4" type="submit"/>
+                <input type="text" class="required" name="deviceName" id="deviceName" size="25" tabindex="1" autocomplete="off"/>
+                <div>
+                    <br/>
+                    <input class="btn btn-submit" name="_eventId_submit" accesskey="l"
+                           th:value="#{cas.mfa.registerdevice.button.register}" tabindex="4" type="submit"/>
+                </div>
             </div>
             <div class="row btn-row">
                 <input type="hidden" name="execution" th:value="${flowExecutionKey}"/>
