Updated footer buttons

--- a/cas-server-webapp/src/main/resources/templates/monitoring/viewConfig.html
+++ b/cas-server-webapp/src/main/resources/templates/monitoring/viewConfig.html
@@ -79,10 +79,7 @@
                     </div>
 
                 </div>
-                <div id="login">
-                    <input class="btn-submit" type="button" onclick="location.reload();" 
-                           th:value="#{cas.viewconfig.button.refresh}" />
-                </div>
+                <div th:replace="fragments/footerButtons"/>
             </div>
 
         </div>
