--- a/cas-server-webapp/src/main/resources/templates/monitoring/viewStatistics.html
+++ b/cas-server-webapp/src/main/resources/templates/monitoring/viewStatistics.html
@@ -186,6 +186,8 @@
                 </div>
             </div>
         </div>
+
+        <div th:replace="fragments/footerButtons"/>
     </div>
 </div>
 </body>
