--- a/cas-server-webapp/src/main/webapp/themes/wavity/res/wavity/templates/login/login.html
+++ b/cas-server-webapp/src/main/webapp/themes/wavity/res/wavity/templates/login/login.html
@@ -5,8 +5,8 @@
 <section id="loginColumns" class="animated fadeInDown">
 	<div class="row">		
 
-		<div class="col-md-6 hidden-xs">			
-			<img id="domainIcon" width="400px" height="400px" class="m-t-50" />
+		<div class="col-md-6 hidden-xs tenant-logo-wrapper">			
+			<img id="domainIcon" class="m-t-50"/>
 		</div>
 
 		<div class="col-md-6">
