--- a/webapp/cas-server-webapp/src/main/resources/templates/layout.html
+++ b/webapp/cas-server-webapp/src/main/resources/templates/layout.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html>
-
+<html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-    <title layout:title-pattern="$CONTENT_TITLE - $DECORATOR_TITLE">CAS &#8211; Central Authentication Service</title>
+    <title layout:title-pattern="$CONTENT_TITLE - $LAYOUT_TITLE">CAS &#8211; Central Authentication Service</title>
 
 
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"/>
