--- a/webapp/cas-server-webapp/src/main/resources/templates/monitoring/viewConfig.html
+++ b/webapp/cas-server-webapp/src/main/resources/templates/monitoring/viewConfig.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="monitoring/layout">
 
 <div th:include="fragments/top"/>
 
