--- a/webapp/cas-server-webapp/src/main/resources/templates/protocol/oauth/confirm.html
+++ b/webapp/cas-server-webapp/src/main/resources/templates/protocol/oauth/confirm.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html layout:decorator="layout">
+<html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="layout">
 
-<head th:inline="text">
+<head>
     <title>[[#{cas.oauth.confirm.pagetitle}]]</title>
 </head>
 
