--- a/webapp/cas-server-webapp/src/main/resources/templates/casMustChangePassView.html
+++ b/webapp/cas-server-webapp/src/main/resources/templates/casMustChangePassView.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html layout:decorator="layout">
+<html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="layout">
 
-<head th:inline="text">
+<head>
     <title>[[#{screen.mustchangepass.heading}]]</title>
     <script type="text/javascript" th:src="@{/js/pm.js}"></script>
 </head>
