--- a/webapp/cas-server-webapp/src/main/resources/templates/error.html
+++ b/webapp/cas-server-webapp/src/main/resources/templates/error.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html layout:decorator="layout">
+<html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="layout">
 
-<head th:inline="text">
+<head>
     <title>[[#{screen.badhours.heading}]]</title>
 
     <script th:inline="javascript">
