--- a/webapp/cas-server-webapp/src/main/resources/templates/monitoring/layout.html
+++ b/webapp/cas-server-webapp/src/main/resources/templates/monitoring/layout.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
     <head>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <link rel="icon" th:href="@{/favicon.ico}" type="image/x-icon"/>
-    
-        <title layout:title-pattern="$CONTENT_TITLE - $DECORATOR_TITLE">CAS &#8211; Central Authentication Service</title>
+        <title layout:title-pattern="$CONTENT_TITLE - $LAYOUT_TITLE">Central Authentication Service</title>
     
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"/>
         <link type="text/css" rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"/>
@@ -15,7 +14,7 @@
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
     
         <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" th:href="@{${#themes.code('standard.custom.css.file')}}" />
+        <link rel="stylesheet" th:href="@{${#themes.code('standard.custom.css.file')}}" />
            
         <script th:inline="javascript">
             /*<![CDATA[*/
