--- a/webapp/cas-server-webapp/src/main/resources/templates/monitoring/viewDashboard.html
+++ b/webapp/cas-server-webapp/src/main/resources/templates/monitoring/viewDashboard.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html layout:decorator="monitoring/layout">
+<html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="monitoring/layout">
 
-<head th:inline="text">
-    <title>[[#{cas.dashboard.pagetitle}]]</title>
+<head>
+    <title th:text="#{cas.dashboard.pagetitle}"></title>
 </head>
 
 <body id="cas">
