--- a/webapp/cas-server-webapp/src/main/resources/templates/monitoring/viewLoggingConfig.html
+++ b/webapp/cas-server-webapp/src/main/resources/templates/monitoring/viewLoggingConfig.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html layout:decorator="monitoring/layout">
+<html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="monitoring/layout">
 
-<head th:inline="text">
-    <title>[[#{cas.loggingdashboard.title}]]</title>
+<head>
+    <title th:text="#{cas.loggingdashboard.title}"></title>
     <script th:inline="javascript">
         /*<![CDATA[*/
 
