--- a/webapp/cas-server-webapp/src/main/resources/templates/casConfirmView.html
+++ b/webapp/cas-server-webapp/src/main/resources/templates/casConfirmView.html
@@ -2,7 +2,7 @@
 <html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="layout">
 
 <head>
-  <title>[[#{screen.confirmation.message}]]</title>
+  <title th:text="#{screen.confirmation.message}"></title>
 </head>
 
 <body id="cas">
