--- a/webapp/cas-server-webapp/src/main/resources/templates/casExpiredPassView.html
+++ b/webapp/cas-server-webapp/src/main/resources/templates/casExpiredPassView.html
@@ -2,7 +2,7 @@
 <html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="layout">
 
 <head>
-    <title>[[#{screen.expiredpass.heading}]]</title>
+    <title th:text="#{screen.expiredpass.heading}"></title>
 </head>
 
 <body id="cas">
