--- a/webapp/cas-server-webapp/src/main/resources/templates/casMustChangePassView.html
+++ b/webapp/cas-server-webapp/src/main/resources/templates/casMustChangePassView.html
@@ -2,7 +2,7 @@
 <html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="layout">
 
 <head>
-    <title>[[#{screen.mustchangepass.heading}]]</title>
+    <title th:text="#{screen.mustchangepass.heading}"></title>
     <script type="text/javascript" th:src="@{/js/pm.js}"></script>
 </head>
 
