--- a/webapp/cas-server-webapp/src/main/resources/templates/casAcceptableUsagePolicyView.html
+++ b/webapp/cas-server-webapp/src/main/resources/templates/casAcceptableUsagePolicyView.html
@@ -2,7 +2,7 @@
 <html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="layout">
 
 <head>
-    <title>[[#{cas.acceptableusagepolicyview.pagetitle}]]</title>
+    <title th:text="#{cas.acceptableusagepolicyview.pagetitle}"></title>
 </head>
 
 <body id="cas">
