--- a/webapp/cas-server-webapp/src/main/resources/templates/casAccountDisabledView.html
+++ b/webapp/cas-server-webapp/src/main/resources/templates/casAccountDisabledView.html
@@ -2,7 +2,7 @@
 <html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="layout">
 
 <head>
-  <title>[[#{screen.accountdisabled.heading}]]</title>
+  <title th:text="#{screen.accountdisabled.heading}"></title>
 </head>
 
 <body id="cas">
