--- a/webapp/cas-server-webapp/src/main/resources/templates/error.html
+++ b/webapp/cas-server-webapp/src/main/resources/templates/error.html
@@ -2,7 +2,7 @@
 <html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="layout">
 
 <head>
-    <title>[[#{screen.badhours.heading}]]</title>
+    <title th:text="#{screen.badhours.heading}"></title>
 
     <script th:inline="javascript">
         /*<![CDATA[*/
