--- a/webapp/cas-server-webapp/src/main/resources/templates/layout.html
+++ b/webapp/cas-server-webapp/src/main/resources/templates/layout.html
@@ -51,7 +51,7 @@
     </div>
     <div th:replace="fragments/footer"/>
 </div>
-<div th:include="fragments/bottom"/>
+<div th:insert="fragments/bottom"/>
 
 </body>
 </html>
