--- a/webapp/cas-server-webapp/src/main/resources/templates/monitoring/layout.html
+++ b/webapp/cas-server-webapp/src/main/resources/templates/monitoring/layout.html
@@ -36,7 +36,7 @@
         
             <div th:replace="fragments/footer"/>
         </div>
-        <div th:include="fragments/bottom"/>
+        <div th:insert="fragments/bottom"/>
     
     </body>
 </html>
