--- a/webapp/cas-server-webapp/src/main/resources/templates/monitoring/viewConfig.html
+++ b/webapp/cas-server-webapp/src/main/resources/templates/monitoring/viewConfig.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="monitoring/layout">
 
-<div th:include="fragments/top"/>
+<head>
+    <title th:text="#{cas.viewconfig.pagetitle}"></title>
+</head>
 
 <body id="cas">
 <div id="container">
-    <div th:include="fragments/logo"/>
-
-    <div id="content">
+    <div layout:fragment="content">
         <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/cupertino/jquery-ui.css"/>
         <link rel="stylesheet" href="//cdn.datatables.net/plug-ins/1.10.6/integration/jqueryui/dataTables.jqueryui.css" />
 
@@ -15,23 +15,12 @@
             var urls = {
                 getConfiguration: /*[[@{/status/env}]]*/
             };
-            
-            function jqueryReady() {                
+            function jqueryReady() {
                 head.load(
-                        // Bootstrap Datables CSS
-                        "//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css",
-                        "//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css",
-                        "//cdn.datatables.net/1.10.9/css/dataTables.bootstrap.min.css"
-                );
-
-                head.load(
-                        // JS Libraries
-                        "//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js",
-
                         // Bootstrap Datatables
                         "//cdn.datatables.net/1.10.9/js/jquery.dataTables.min.js",
                         "//cdn.datatables.net/1.10.9/js/dataTables.bootstrap.min.js",
-                        /*[[@{/js/viewConfig.js}]]*/ 
+                        /*[[@{/js/viewConfig.js}]]*/
                 );
             }
         </script>
@@ -43,7 +32,7 @@
             <div id="viewConfigError">
                 <h2 th:text="#{cas.viewconfig.errormessage}"></h2>
                 <div>
-                    <input class="btn btn-success" type="button" onclick="location.reload();" 
+                    <input class="btn btn-success" type="button" onclick="location.reload();"
                            th:value="#{cas.viewconfig.button.refresh}"/>
                 </div>
             </div>
@@ -53,13 +42,13 @@
 
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h4><span class="glyphicon glyphicon-cog" aria-hidden="true"/> 
-                            <span th:text="#{cas.viewconfig.pagetitle}" />
+                        <h4 th:text="#{cas.viewconfig.pagetitle}">
+                            <span class="glyphicon glyphicon-cog" aria-hidden="true"/>
                         </h4>
                     </div>
                     <div class="panel-body">
                         <div id="containers-table" class="container-fluid">
-                            <div id="msg" style="display:none"/>
+                            
                             <table id="viewConfigsTable" class="display table table-striped table-bordered">
                                 <thead>
                                 <tr>
@@ -79,13 +68,11 @@
                     </div>
 
                 </div>
-                <div th:replace="fragments/footerButtons"/>
             </div>
-
         </div>
+        <div th:replace="fragments/footerButtons"/>
     </div>
-    <div th:include="fragments/footer"/>
+    
 </div>
 </body>
-<div th:include="fragments/bottom"/>
 </html>
