--- a/webapp/cas-server-webapp/src/main/resources/templates/monitoring/viewSsoSessions.html
+++ b/webapp/cas-server-webapp/src/main/resources/templates/monitoring/viewSsoSessions.html
@@ -50,9 +50,7 @@
 
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h4><span class="glyphicon glyphicon-stats" aria-hidden="true"/>
-                            <span th:text="#{cas.ssosessions.report.pagetitle}"/>
-                        </h4>
+                        <h4 th:text="#{cas.ssosessions.report.pagetitle}"><span class="glyphicon glyphicon-stats" aria-hidden="true"/></h4>
                     </div>
                     <div class="panel-body">
                         <div id="session-counts" class="container-fluid">
