--- a/webapp/cas-server-webapp/src/main/resources/templates/fragments/head.html
+++ b/webapp/cas-server-webapp/src/main/resources/templates/fragments/head.html
@@ -2,7 +2,7 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title th:include="::title">CAS &#8211; Central Authentication Service</title>
+    <title th:insert="::title">CAS - Central Authentication Service</title>
 
     <link rel="stylesheet" th:href="@{${#themes.code('standard.custom.css.file')}}" />
 
