--- a/webapp/cas-server-webapp/src/main/resources/templates/monitoring/viewDashboard.html
+++ b/webapp/cas-server-webapp/src/main/resources/templates/monitoring/viewDashboard.html
@@ -30,7 +30,7 @@
                     <li th:if="${actuatorEndpointsEnabled}"><a th:href="@{/status/info}">Info</a></li>
                     <li th:if="${actuatorEndpointsEnabled}"><a th:href="@{/status/metrics}">Metrics</a></li>
                     <li><a th:href="@{/status/stats}">Statistics Panel</a></li>
-                    <li><a th:href="@{/status/config}">Configuration Panel</a></li>
+                    <li><a th:href="@{/status/config}">Config Panel</a></li>
                     <li><a th:href="@{/status/ssosessions}">SSO Sessions</a></li>
                     <li><a th:href="@{/status/logging}">Logging</a></li>
                 </ul>
