--- a/webapp/cas-server-webapp/src/main/resources/templates/monitoring/viewSsoSessions.html
+++ b/webapp/cas-server-webapp/src/main/resources/templates/monitoring/viewSsoSessions.html
@@ -7,6 +7,8 @@
 
 <body id="cas">
 <div layout:fragment="content">
+    <link rel="stylesheet" th:href="@{/css/ssosessions.css}"/> 
+    
     <div id="content">
 
         <script type="text/javascript" th:inline="javascript">
@@ -20,19 +22,6 @@
 
             function jqueryReady() {
                 head.load(
-                        // Bootstrap Datables CSS
-                        "//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css",
-                        "//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css",
-                        "//cdn.datatables.net/1.10.9/css/dataTables.bootstrap.min.css",
-                        /*[[@{/css/ssosessions.css}]]*/
-                );
-
-                head.load(
-                        // JS Libraries
-                        "//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js",
-                        // Bootstrap Datatables
-                        "//cdn.datatables.net/1.10.9/js/jquery.dataTables.min.js",
-                        "//cdn.datatables.net/1.10.9/js/dataTables.bootstrap.min.js",
                         /*[[@{/js/ssosessions.js}]]*/
                 );
             }
