--- a/webapp/cas-server-webapp/src/main/resources/templates/monitoring/layout.html
+++ b/webapp/cas-server-webapp/src/main/resources/templates/monitoring/layout.html
@@ -9,13 +9,18 @@
     
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"/>
         <link type="text/css" rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"/>
+        <link rel="stylesheet" th:href="@{${#themes.code('standard.custom.css.file')}}" />
+        
         <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
     
         <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-        <link rel="stylesheet" th:href="@{${#themes.code('standard.custom.css.file')}}" />
-           
+
+        <link rel="stylesheet" href="//cdn.datatables.net/1.10.9/css/dataTables.bootstrap.min.css" />
+        <script src="//cdn.datatables.net/1.10.9/js/jquery.dataTables.min.js"></script>
+        <script src="//cdn.datatables.net/1.10.9/js/dataTables.bootstrap.min.js"></script>
+        
         <script th:inline="javascript">
             /*<![CDATA[*/
 
