--- a/webapp/cas-server-webapp/src/main/resources/templates/monitoring/viewLoggingConfig.html
+++ b/webapp/cas-server-webapp/src/main/resources/templates/monitoring/viewLoggingConfig.html
@@ -10,6 +10,7 @@
 
         var urls = {
             getConfiguration: /*[[@{/status/logging/getConfiguration}]]*/,
+            getAuditLog: /*[[@{/status/logging/getAuditLog}]]*/,
             updateLevel: /*[[@{/status/logging/updateLoggerLevel}]]*/,
             logOutput: /*[[@{/logoutput}]]*/
         };
@@ -21,15 +22,9 @@
 
         function jqueryReady() {
             head.load(
-                    // Bootstrap Datables CSS
-                    "//cdn.datatables.net/1.10.9/css/dataTables.bootstrap.min.css",
                     /*[[@{/css/loggingDashboard.css}]]*/
             );
             head.load(
-                    // JS Libraries
-                    "//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js",
-                    "//cdn.datatables.net/1.10.9/js/jquery.dataTables.min.js",
-                    "//cdn.datatables.net/1.10.9/js/dataTables.bootstrap.min.js",
                     /*[[@{/js/sockjs.js}]]*/,
                     /*[[@{/js/stomp.js}]]*/,
                     /*[[@{/js/loggingDashboard.js}]]*/
@@ -67,7 +62,8 @@
                 <li role="presentation"><a href="#activeLoggers" aria-controls="activeLoggers" role="tab" data-toggle="tab">Active
                     Loggers</a></li>
                  -->
-                <li role="presentation"><a href="#logOutput" aria-controls="logOutput" role="tab" data-toggle="tab">Log Output</a></li>
+                <li role="presentation"><a href="#logOutput" aria-controls="logOutput" role="tab" data-toggle="tab">CAS Log</a></li>
+                <li role="presentation"><a href="#auditLog" aria-controls="auditLog" role="tab" data-toggle="tab">Audit Log</a></li>
             </ul>
 
             <!-- Tab panes -->
@@ -110,6 +106,21 @@
                             <td></td>
                         </tr>
                         </tbody>
+                    </table>
+                </div>
+                <div role="tabpanel" class="tab-pane" id="auditLog">
+                    <table id="auditLogTable" class="display table table-striped table-bordered">
+                        <thead>
+                        <tr>
+                            <th>Who</th>
+                            <th>What</th>
+                            <th>Action</th>
+                            <th>When</th>
+                            <th>Client IP</th>
+                            <th>Server IP</th>
+                        </tr>
+                        </thead>
+                        <tbody />
                     </table>
                 </div>
                 <div role="tabpanel" class="tab-pane" id="logOutput">
